--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <title>Boost & Energy BIO – zelený čaj</title>
+</head>
+<body>
+  <h1>Boost & Energy BIO</h1>
+  <p>Testujeme propojení GitHub Codexu s tímto HTML souborem.</p>
+</body>
+</html>
 
