--- a/index.html
+++ b/index.html
@@ -2,11 +2,60 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Boost & Energy BIO – zelený čaj</title>
+  <title>Boost & Energy BIO - zelený čaj | Vyhonky.cz</title>
+  <meta name="description" content="Objevte sílu zeleného čaje Boost & Energy BIO. Citronovo-meruňková chuť, přírodní složení a inspirace moderní technologií.">
+  <meta name="keywords" content="zelený čaj, BIO čaj, energy tea, přírodní energie, kombucha, umělá inteligence">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, Helvetica, sans-serif; color: #333; line-height: 1.6; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+    td { padding: 8px; }
+    .cta { text-align: center; margin: 20px 0; }
+  </style>
 </head>
 <body>
-  <h1>Boost & Energy BIO</h1>
-  <p>Testujeme propojení GitHub Codexu s tímto HTML souborem.</p>
+  <h1>Boost &amp; Energy BIO - zelený čaj</h1>
+  <p>Zažijte okamžitou dávku přírodní energie s naším čajem <strong>Boost &amp; Energy BIO</strong>. Citronovo-meruňková vůně pohladí vaše smysly a promění každou pauzu v zážitek. Pečlivě vybrané suroviny v BIO kvalitě dodají energii po náročném dni a pomohou vám soustředit se na to, co je důležité.</p>
+
+  <table>
+    <tbody>
+      <tr>
+        <td>Popis:</td>
+        <td>Když potřebujete doplnit energii po náročném dni, sáhněte po našem čaji Boost &amp; Energy. Příjemně osvěží a nabudí.</td>
+      </tr>
+      <tr>
+        <td>Chuť:</td>
+        <td>Citronovo-meruňková chuť</td>
+      </tr>
+      <tr>
+        <td>Složení:</td>
+        <td>Zelený čaj China Gunpowder* (75%), Zelený čaj Matcha* (1%), Bílý čaj Mao Feng*, Černý čaj Golden Yunnan OP*, Citronová tráva* (10%), Maté* (6%), Citronová kůra*, Sléz*, Pampeliška*, Přeslička*, Spirulina*, Guarana* (1%), Přírodní Citronové aroma, Přírodní meruňkové aroma</td>
+      </tr>
+      <tr>
+        <td>Země původu:</td>
+        <td>Německo</td>
+      </tr>
+    </tbody>
+  </table>
+  <p>* BIO KVALITA</p>
+
+  <p>Naše moderní vyhledávání, podpořené umělou inteligencí, vám pomůže najít ty správné čaje pro každý den. Stačí pár kliknutí a můžete si být jisti, že sáhnete po čaji, který vám nejvíce vyhovuje.</p>
+
+  <h2>Příprava</h2>
+  <p>12–15 g/l | 2–3 min | 75–80 °C</p>
+
+  <div class="cta">
+    <a href="#buy" style="background-color:#2e7d32;color:#fff;padding:10px 20px;border-radius:5px;text-decoration:none;">Koupit teď</a>
+  </div>
+
+  <hr>
+  <h3>Objevte také</h3>
+  <p>Nabízíme širokou škálu zdravých produktů pro domácí výrobu Kombuchy a zdravého životního stylu.</p>
+  <ul>
+    <li><a href="/kombucha-scoby/">Kombucha SCOBY</a> – ideální pro domácí výrobu fermentovaného nápoje.</li>
+    <li><a href="/bio-kombucha-medunka-hotovy-napoj-k-okamzitemu-uziti/">Hotový nápoj Kombucha</a> – přírodní fermentovaný nápoj plný probiotik.</li>
+    <li><a href="/kombucha---startovaci-sada-pro-zacatecniky/">Kombucha startovací sada</a> – vše potřebné pro začátek.</li>
+    <li><a href="/seminka-microgreens/">Semena microgreens</a> – vypěstujte si doma čerstvé výhonky.</li>
+  </ul>
 </body>
 </html>
-
